--- a/WebContent/president.css
+++ b/WebContent/president.css
@@ -59,10 +59,12 @@
  	text-align: center;
  	marin-left:20px;
  	margin-right: 20px;
+ 	
  }
  
  img{
  	
  	height:50%;
  	width: 50%;
+ 	border-radius: 40px;
  }
