--- a/WebContent/president.css
+++ b/WebContent/president.css
@@ -69,12 +69,21 @@
  	margin-right: 20px;
  	
  }
+ #funfact{
+ color: white;
+ }
  
  body{
-background-image: url("american-flag-15.jpg");
+background-image: url("photos/american-flag-15.jpg");
 background-size: cover;
 background-repeat: no-repeat;
  
+ }
+ #presidentintro{
+ color: white;
+ }
+ .results{
+ background-color: blue;
  }
  
 form{
