--- a/WebContent/president.css
+++ b/WebContent/president.css
@@ -1,102 +1,106 @@
 @CHARSET "UTF-8";
 
- #title{
- 	font-size: 36px;
- 	color: white;
- 	text-align: center;
- 	margin-bottom: 70px;
- }
- /* .gallery-title:after {
-     content: "";
-     position: absolute;
-     width: 7.5%;
-     left: 46.5%;
-     height: 45px;
-     border-bottom: 1px solid #5e5e5e;
- } */
- .filter-button
- {
-     font-size: 18px;
-     border: 1px solid #42B32F;
-     border-radius: 5px;
-     text-align: center;
-     color: #42B32F;
-     margin-bottom: 30px;
- 
- }
- .filter-button:hover
- {
-     font-size: 18px;
-     border: 1px solid #42B32F;
-     border-radius: 5px;
-     text-align: center;
-     color: #ffffff;
-     background-color: #42B32F;
- 
- }
- .filter-button.active
- {
-     background-color: #42B32F;
-     color: white;
- }
- .port-image
- {
-     width: 100%;
- }
- 
- .gallery_product
- {
-     margin-bottom: 30px;
- }
- #alignrows{
- text-align:center;
- }
- .name{
- font-family: bold;
- font-size: 20px;
- color: white;
- font-style: outline;
- }
- 
- .gallery{
- 	display:inline-block;
- 	margin-top: 20px;
-     height: 20%;
- 	width: 20%; 
- 	border-radius: 10px;	
- 	text-align: center;
- 	marin-left:40px;
- 	margin-right: 20px;
- 	
- }
- #funfact{
- color: white;
- }
- 
- body{
-background-image: url("photos/american-flag-15.jpg");
-background-size: cover;
-background-repeat: no-repeat;
- 
- }
- #presidentintro{
- color: white;
- }
- .results{
- background-color: blue;
- }
- 
-form{
- color: white;
- }
- 
- button{
- 
- color:red;
- }
- img{
- 	
- 	height:50%;
- 	width: 50%;
- 	border-radius: 40px;
- }
+#title {
+	font-size: 36px;
+	color: white;
+	text-align: center;
+	margin-bottom: 70px;
+}
+
+.filter-button {
+	font-size: 18px;
+	border: 1px solid #42B32F;
+	border-radius: 5px;
+	text-align: center;
+	color: #42B32F;
+	margin-bottom: 30px;
+}
+
+.filter-button:hover {
+	font-size: 18px;
+	border: 1px solid #42B32F;
+	border-radius: 5px;
+	text-align: center;
+	color: #ffffff;
+	background-color: #42B32F;
+}
+
+.filter-button.active {
+	background-color: #42B32F;
+	color: white;
+}
+
+.port-image {
+	width: 100%;
+}
+
+.gallery_product {
+	margin-bottom: 30px;
+}
+
+#alignrows {
+	text-align: center;
+	color: white;
+}
+
+.name {
+	font-family: bold;
+	font-size: 20px;
+	color: white;
+	font-style: outline;
+}
+
+.gallery {
+	display: inline-block;
+	margin-top: 20px;
+	height: 20%;
+	width: 20%;
+	border-radius: 10px;
+	text-align: center;
+	marin-left: 40px;
+	margin-right: 20px;
+}
+
+#funfact {
+	color: white;
+}
+
+body {
+	background-image: url("photos/american-flag-15.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
+h1 .#presidentintro {
+	color: white;
+	height: 20%;
+	width: 20%;
+	text-align: center;
+}
+
+.results {
+	background-color: blue;
+}
+
+form {
+	color: white;
+}
+
+button {
+	color: red;
+}
+
+#prespic {
+	height: 10%;
+	width: auto;
+}
+
+img {
+	height: 50%;
+	width: 50%;
+	border-radius: 40px;
+}
+
+.button {
+	text-align: center;
+}
